Use ParquetReadOptions instead of hadoopconfiguration