@@ -1,15 +1,22 @@
 package edu.stanford.slac.archiverappliance.plain.parquet;
 
+import com.google.protobuf.Message;
 import edu.stanford.slac.archiverappliance.PB.data.DBR2PBMessageTypeMapping;
 import edu.stanford.slac.archiverappliance.plain.AppendDataStateData;
 import edu.stanford.slac.archiverappliance.plain.PathResolver;
-import org.apache.hadoop.conf.Configuration;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.parquet.ParquetReadOptions;
+import org.apache.parquet.conf.ParquetConfiguration;
+import org.apache.parquet.conf.PlainParquetConfiguration;
+import org.apache.parquet.hadoop.ParquetFileWriter;
 import org.apache.parquet.hadoop.ParquetWriter;
 import org.apache.parquet.hadoop.metadata.CompressionCodecName;
 import org.apache.parquet.hadoop.rewrite.ParquetRewriter;
 import org.apache.parquet.hadoop.rewrite.RewriteOptions;
+import org.apache.parquet.io.InputFile;
+import org.apache.parquet.io.LocalInputFile;
+import org.apache.parquet.io.LocalOutputFile;
 import org.epics.archiverappliance.Event;
 import org.epics.archiverappliance.EventStream;
 import org.epics.archiverappliance.common.BasicContext;
@@ -29,14 +36,14 @@ import java.util.List;
 /**
  * ParquetAppendDataStateData extends AppendDataStateData to support writing data to Parquet files.
  */
-public class ParquetAppendDataStateData extends AppendDataStateData {
+public class ParquetAppendDataStateData<T extends Message> extends AppendDataStateData {
     private static final Logger logger = LogManager.getLogger(ParquetAppendDataStateData.class.getName());
     private static final String TEMP_FILE_PREFIX = "~";
-    private final Configuration configuration;
+    private final ParquetReadOptions readOptions;
     private final CompressionCodecName compressionCodecName;
-    EpicsParquetWriter.Builder<Object> writerBuilder;
+    EpicsParquetWriter.Builder writerBuilder;
     private Path tempFile;
-    private ParquetWriter<Object> writer;
+    private ParquetWriter<Message> writer;
 
     /**
      * ParquetAppendDataStateData extends AppendDataStateData to support writing data to Parquet files.
@@ -56,21 +63,11 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
             Instant lastKnownTimestamp,
             CompressionCodecName compressionCodecName,
             PVNameToKeyMapping pv2key,
-            Configuration configuration,
+            ParquetReadOptions readOptions,
             PathResolver pathResolver) {
         super(partitionGranularity, rootFolder, desc, lastKnownTimestamp, pv2key, pathResolver);
         this.compressionCodecName = compressionCodecName;
-        this.configuration = configuration;
-    }
-
-    /**
-     * Find the path to the checksum file for the given file.
-     *
-     * @param currentPVPath The path to the file.
-     * @return The path to the checksum file.
-     */
-    private static Path getCheckSumPath(Path currentPVPath) {
-        return Path.of(String.valueOf(currentPVPath.getParent()), "." + currentPVPath.getFileName() + ".crc");
+        this.readOptions = readOptions;
     }
 
     private void combineFiles(List<Path> inPaths, Path outPath, boolean recompress) throws IOException {
@@ -78,44 +75,36 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
         if (inPaths.contains(outTempPath)) {
             outTempPath = getOutTempPath(outTempPath);
         }
-        List<org.apache.hadoop.fs.Path> rewriteInPaths = new ArrayList<>();
+        List<InputFile> rewriteInPaths = new ArrayList<>();
         if (Files.exists(outPath)) {
-            if (new ParquetInfo(outPath, this.configuration).getFirstEvent() == null) {
+            if (new ParquetInfo(outPath, this.readOptions).getFirstEvent() == null) {
                 // if the file is effectively empty, delete it
                 Files.delete(outPath);
-                Path outCheckSumPath = getCheckSumPath(outPath);
-                Files.delete(outCheckSumPath);
                 // if this is the only file, just copy it over
                 if (inPaths.size() == 1) {
-                    Files.copy(inPaths.get(0), outPath);
-                    Files.copy(getCheckSumPath(inPaths.get(0)), outCheckSumPath);
+                    Files.copy(inPaths.getFirst(), outPath);
                     return;
                 }
             } else {
-                rewriteInPaths.add(new org.apache.hadoop.fs.Path(outPath.toUri()));
+                rewriteInPaths.add(new LocalInputFile(outPath));
             }
         }
-        rewriteInPaths.addAll(inPaths.stream()
-                .map(p -> new org.apache.hadoop.fs.Path(p.toUri()))
-                .toList());
-        Configuration conf = new Configuration();
+        rewriteInPaths.addAll(inPaths.stream().map(LocalInputFile::new).toList());
+        ParquetConfiguration conf = new PlainParquetConfiguration();
         RewriteOptions.Builder rewriteOptionsBuilder =
-                new RewriteOptions.Builder(conf, rewriteInPaths, new org.apache.hadoop.fs.Path(outTempPath.toUri()));
+                new RewriteOptions.Builder(conf, rewriteInPaths, new LocalOutputFile(outTempPath));
         if (recompress) {
             rewriteOptionsBuilder = rewriteOptionsBuilder.transform(compressionCodecName);
         }
         RewriteOptions rewriteOptions = rewriteOptionsBuilder.build();
-        try {
-            ParquetRewriter rewriter = new ParquetRewriter(rewriteOptions);
+        try (ParquetRewriter rewriter = new ParquetRewriter(rewriteOptions)) {
             rewriter.processBlocks();
-            rewriter.close();
         } catch (Exception e) {
             logger.error("Failed to combine files {}", rewriteInPaths, e);
             throw e;
         }
         // Replace the old file with the new file
         Files.move(outTempPath, outPath, StandardCopyOption.REPLACE_EXISTING);
-        Files.move(getCheckSumPath(outTempPath), getCheckSumPath(outPath), StandardCopyOption.REPLACE_EXISTING);
     }
 
     private static Path getOutTempPath(Path outPath) {
@@ -134,7 +123,7 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
     public void updateStateBasedOnExistingFile(String pvName, Path currentPVFilePath) throws IOException {
         logger.debug("parquet updateStateBasedOnExistingFile  pv {} pvPath {} ", pvName, currentPVFilePath);
 
-        ParquetInfo info = new ParquetInfo(currentPVFilePath, configuration);
+        ParquetInfo info = new ParquetInfo(currentPVFilePath, readOptions);
         if (!info.getPVName().equals(pvName))
             throw new IOException("Trying to append data for " + pvName + " to a file " + currentPVFilePath
                     + " that has data for " + info.getPVName());
@@ -173,11 +162,11 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
                 + " of type " + stream.getDescription().getArchDBRType()
                 + " of PBPayload "
                 + stream.getDescription().getArchDBRType().getPBPayloadType());
-        var hadoopPath = new org.apache.hadoop.fs.Path(pvPath.toUri());
+        var localOutputFile = new LocalOutputFile(pvPath);
         var messageClass =
                 DBR2PBMessageTypeMapping.getMessageClass(stream.getDescription().getArchDBRType());
         assert messageClass != null;
-        this.writerBuilder = EpicsParquetWriter.builder(hadoopPath)
+        this.writerBuilder = EpicsParquetWriter.builder(localOutputFile)
                 .withMessage(messageClass)
                 .withPVName(pvName)
                 .withYear(this.currentEventsYear)
@@ -236,15 +225,16 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
         }
     }
 
-    public EpicsParquetWriter.Builder<Object> buildWriterExistingFile(Path currentPVPath, ParquetInfo info) {
+    public EpicsParquetWriter.Builder buildWriterExistingFile(Path currentPVPath, ParquetInfo info) {
         logger.debug("parquet buildWriterExistingFile  pvPath {} fileInfo {} ", currentPVPath, info);
         var tempCurrentPVPath = Path.of(
                 currentPVPath.toAbsolutePath().getParent().toString(), TEMP_FILE_PREFIX + currentPVPath.getFileName());
         this.tempFile = tempCurrentPVPath;
-        var newHadoopPath = new org.apache.hadoop.fs.Path(tempCurrentPVPath.toUri());
+        var newOutputFile = new LocalOutputFile(tempCurrentPVPath);
         var messageClass = DBR2PBMessageTypeMapping.getMessageClass(info.getType());
 
-        return EpicsParquetWriter.builder(newHadoopPath)
+        return EpicsParquetWriter.builder(newOutputFile)
+                .withWriteMode(ParquetFileWriter.Mode.OVERWRITE)
                 .withMessage(messageClass)
                 .withPVName(info.getPVName())
                 .withYear(info.getDataYear())
@@ -324,8 +314,8 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
 
     @Override
     public String toString() {
-        return "ParquetAppendDataStateData{" + "configuration="
-                + configuration + ", writerBuilder="
+        return "ParquetAppendDataStateData{" + "readOptions="
+                + readOptions + ", writerBuilder="
                 + writerBuilder + ", tempFile="
                 + tempFile + ", writer="
                 + writer + ", rootFolder='"
@@ -348,7 +338,6 @@ public class ParquetAppendDataStateData extends AppendDataStateData {
             // Delete tempFile
             if (Files.exists(tempFile)) {
                 Files.delete(tempFile);
-                Files.delete(getCheckSumPath(tempFile));
             }
             tempFile = null;
         }
